<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="camp.codelab.codelablive.MainActivity">

    <EditText
        android:id="@+id/number1XML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/number2XML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/subXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/mulXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/divXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/result" />


</LinearLayout>
